--- a/src/components/Dashboard/Decklist/Deck/Deck.css
+++ b/src/components/Dashboard/Decklist/Deck/Deck.css
@@ -2,6 +2,6 @@
   height: 160px;
   background: #f7f7f7;
   width: 75%;
-  margin: 0 auto;
+  margin: 50px auto;
   box-shadow: 3px 11px 20px -4px rgba(0, 0, 0, 0.34);
 }
