--- a/src/components/Dashboard/Detail/Card/Card.css
+++ b/src/components/Dashboard/Detail/Card/Card.css
@@ -2,6 +2,6 @@
   width: 50vw;
   background: #f7f7f7;
   height: 400px;
-  margin: 0 auto;
+  margin: 20px 10vw;
   box-shadow: 3px 11px 20px -4px rgba(0, 0, 0, 0.34);
 }
