--- a/src/components/Dashboard/Decklist/Deck/Deck.css
+++ b/src/components/Dashboard/Decklist/Deck/Deck.css
@@ -2,6 +2,14 @@
   height: 160px;
   background: #f7f7f7;
   width: 75%;
-  margin: 50px auto;
+  margin: 40px 20px;
+  padding: 20px;
+  border: 5px solid transparent;
+  border-radius: 5px;
   box-shadow: 3px 11px 20px -4px rgba(0, 0, 0, 0.34);
+}
+
+.highlight {
+  border: 5px solid #a0e8f3;
+  background: #eaeaea;
 }
