--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -4,18 +4,7 @@
   background: #444444;
 }
 
-.decklist {
-  width: 25vw;
-  height: 100%;
-  overflow-y: scroll;
-  background: rgba(106, 106, 106, 0.6);
-}
-
-.add-deck {
-  margin-top: 10px;
-  margin-left: 20px;
-}
-
 .detail {
-  width: 100%;
+  display: block;
+  min-width: 60vw;
 }
