--- a/src/components/Dashboard/Detail/Card/Card.css
+++ b/src/components/Dashboard/Detail/Card/Card.css
@@ -1,8 +1,9 @@
 .flashcard {
-  width: 40vw;
+  width: 500px;
   background: #f7f7f7;
   height: 400px;
   margin: 20px 10vw;
+  border-radius: 4px;
   box-shadow: 3px 11px 20px -4px rgba(0, 0, 0, 0.34);
 }
 
@@ -25,8 +26,20 @@
   height: 75%;
   justify-content: center;
   align-items: center;
+  padding: 15px;
 }
 
-.card-text p {
+.front {
   font-size: 50px;
+}
+
+.back {
+  font-size: 30px;
+}
+
+.card-info {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 20px;
+  color: #b87e17;
 }
