--- a/src/components/Dashboard/Card/Card.css
+++ b/src/components/Dashboard/Card/Card.css
@@ -2,7 +2,7 @@
   width: 500px;
   background: #f7f7f7;
   height: 400px;
-  margin: 0 10vw;
+  margin: 10px auto;
   border-radius: 4px;
   box-shadow: 3px 11px 20px -4px rgba(0, 0, 0, 0.34);
 }
