--- a/src/components/Dashboard/Detail/Detail.css
+++ b/src/components/Dashboard/Detail/Detail.css
@@ -1,6 +1,16 @@
+.detail {
+  width: 100%;
+}
+
 .add-card {
   margin-top: 10px;
   margin-left: 20px;
+}
+
+.detail-btn-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flash-form {
