--- a/src/components/Dashboard/Card/Card.css
+++ b/src/components/Dashboard/Card/Card.css
@@ -3,6 +3,7 @@
   background: #f7f7f7;
   height: 400px;
   margin: 10px auto;
+  border: 3px solid transparent;
   border-radius: 4px;
   box-shadow: 3px 11px 20px -4px rgba(0, 0, 0, 0.34);
 }
@@ -21,6 +22,18 @@
   margin: 4px 6px;
 }
 
+.right {
+  color: green;
+}
+
+.wrong {
+  color: red;
+}
+
+.wrong-card {
+  border: 3px solid red;
+}
+
 .card-options-link:hover {
   cursor: pointer;
 }
@@ -34,11 +47,11 @@
 }
 
 .front {
-  font-size: 50px;
+  font-size: 40px;
 }
 
 .back {
-  font-size: 30px;
+  font-size: 40px;
 }
 
 .card-info {
