Add close buttons to card edit and create forms

--- a/src/components/Dashboard/Detail/Detail.css
+++ b/src/components/Dashboard/Detail/Detail.css
@@ -15,6 +15,13 @@
 
 .flash-form {
   margin: 40px;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
 
 .card-btn-group {
