--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -6,10 +6,16 @@
 
 .hook {
   color: #ffffff;
+  padding: 20px;
+  margin-left: 20px;
 }
 
 @media (min-width: 750px) {
   #form-container {
     margin: 40px 60px;
+  }
+
+  .hook {
+    padding: 150px;
   }
 }
