--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -2,6 +2,7 @@
   background: url(https://blog.ecampus.com/wp-content/uploads/2015/08/studying-tips-note-cards.jpg);
   background-size: cover;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .hook {
